<resources>
    <string name="app_name">IntentSamples</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="call">Llamar</string>
    <string name="email">Email</string>
    <string name="share">Compartir</string>
    <string name="browser">Navegador</string>
    <string name="take_picture">Tomar Fotor</string>
    <string name="change_activity">Cambiar Activity</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_second">SecondActivity</string>

</resources>
